로그인 및 회원가입페이지

--- a/pages/login.html
+++ b/pages/login.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="./css/common.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <!-- 헤더 -->
@@ -24,16 +24,16 @@
                     </div>
                     <nav>
                         <a href="" class="login-btn">
-                            <img src="./img/icon-user.svg" alt="">
+                            <img src="../img/icon-user.svg" alt="">
                         </a>
                         <a href="" class="cart-btn">
-                            <img src="./img/icon-cart.svg" alt="">
+                            <img src="../img/icon-cart.svg" alt="">
                         </a>
                         <a href="" class="wish-btn">
-                            <img src="./img/icon-wish.svg" alt="">
+                            <img src="../img/icon-wish.svg" alt="">
                         </a>
                         <a href="" class="copy-btn">
-                            <img src="./img/icon-copy.svg" alt="">
+                            <img src="../img/icon-copy.svg" alt="">
                         </a>
                     </nav>
                 </div>
@@ -92,6 +92,45 @@
 
         <!-- 메인 -->
         <main>
+            <section class="login-wrap">
+                <h2 class="">로그인</h2>
+                <ul>
+                    <li><input type="text" placeholder="아이디를 입력해주세요." title="아이디입력"></li>
+                    <li>
+                        <input type="password" placeholder="비밀번호를 입력해주세요." title="비밀번호입력">
+                        <a href="" class="view-btn"></a>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="login">
+                        <label for="login">로그인 상태유지</label>
+                        <a href="">아이디/비밀번호</a>
+                    </li>
+                    <li>
+                        <button>로그인하기</button>
+                    </li>
+                    <li class="sns-wrap">
+                        <div class="sns-group">
+                            <h3>SNS로그인</h3>
+                            <div class="img-box">
+                                <a href="" class="kakao"></a>
+                                <a href="" class="naver"></a>
+                                <a href="" class="google"></a>
+                                <a href="" class="apple"></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a class="register-btn">회원가입</a>
+                    </li>
+                </ul>
+                <a href="" class="bottom">
+                    <span>회원이 아니신가요?</span>
+                    <span>비회원 주문조회</span>
+                    <div class="img-box">
+                        <img src="../img/right-arrow.svg" alt="">
+                    </div>
+                </a>
+            </section>
         </main>
 
         <!-- 푸터 -->
