--- a/pages/register.html
+++ b/pages/register.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="./css/common.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <!-- 헤더 -->
@@ -24,16 +24,17 @@
                     </div>
                     <nav>
                         <a href="" class="login-btn">
-                            <img src="./img/icon-user.svg" alt="">
+                            <img src="../img/icon-user.svg" alt="">
                         </a>
                         <a href="" class="cart-btn">
-                            <img src="./img/icon-cart.svg" alt="">
+                            <img src="../img/icon-cart.svg" alt="">
+                            <span>3</span>
                         </a>
                         <a href="" class="wish-btn">
-                            <img src="./img/icon-wish.svg" alt="">
+                            <img src="../img/icon-wish.svg" alt="">
                         </a>
                         <a href="" class="copy-btn">
-                            <img src="./img/icon-copy.svg" alt="">
+                            <img src="../img/icon-copy.svg" alt="">
                         </a>
                     </nav>
                 </div>
@@ -89,11 +90,60 @@
 
             </div>
         </header>
-
         <!-- 메인 -->
         <main>
+            <section class="register-wrap">
+                <form action="">
+                    <h2>회원가입</h2>
+                    <ul>
+                        <li>
+                            <label for="loginid">* 아이디</label>
+                            <input type="text" placeholder="아이디(이메일 주소)" id="loginid">
+                        </li>
+                        <li>
+                            <label for="">* 비밀번호</label>
+                            <div>
+                                <input type="password" placeholder="비밀번호" id="">
+                                <a href="" class="view-btn"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <input type="password" placeholder="비밀번호 재입력" title="비밀번호재입력"></li>
+                            <a href="" class="view-btn"></a>
+                        <li>
+                            <label for="name">* 이름</label>
+                            <input type="text" placeholder="이름(실명)" id="name">
+                            <button class="num-transfer-btn">인증번호 전송</button>
+                        </li>
+                        <li>
+                            <input type="text" placeholder="인증번호 입력">
+                        </li>
+                        <li>
+                            <div class="radio-group">
+                                <label class="radio">
+                                    <input type="radio" name="info">                                    
+                                    <span>이용약관 동의</span>
+                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
+                                </label>
+                                <label class="radio">                                    
+                                    <input type="radio" name="info">
+                                    <span>개인정보 취급방침 동의</span>
+                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
+                                </label>
+                                <label class="radio">
+                                    <input type="radio" name="info">
+                                    <span>마케팅 정보 수신 동의</span>
+                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
+                                </label>
+                            </div>
+                        </li>
+                        <li>
+                            <button class="register-btn">회원가입</button>
+                        </li>
+                    </ul>
+                </form>
+            </section>
         </main>
-
         <!-- 푸터 -->
         <footer>
             <div class="top-area">
@@ -129,12 +179,16 @@
                     <div class="left-area">
                         <div class="company-name">(주)홍진우 회사</div>
                         <div class="company-info">
-                            <span>대표이사 : 홍진우</span>
-                            <span>서울특별시 아무구 아무동 빌딩 110층 1111호</span>
-                            <span>호스팅서비스 사업자 : AWS</span>
-                            <span class="regis-num">사업자 등록번호:222-11-000333</span>
-                            <span>통신판매업신고 : 2016-서울아무동-8888</span>
-                            <span>E_mail : hjw30122naver.com</span>
+                            <div>
+                                <span>대표이사 : 홍진우</span>
+                                <span>서울특별시 아무구 아무동 빌딩 110층 1111호</span>
+                                <span>호스팅서비스 사업자 : AWS</span>
+                                <span class="regis-num">사업자 등록번호:222-11-000333</span>
+                            </div>
+                            <div>
+                                <span>통신판매업신고 : 2016-서울아무동-8888</span>
+                                <span>E_mail : hjw30122naver.com</span>
+                            </div>
                         </div>
                         <div class="copyright-wrap">
                             <span class="tit">소비자피해보상</span>
@@ -150,7 +204,7 @@
                         </div>
                         <div class="smart-group">
                             <div class="img-box">
-                                <img src="./img/qrcode.svg" alt="">
+                                <img src="../img/qrcode.svg" alt="">
                             </div>
                             <div class="txt-box">
                                 <span>홍진우 APP 다운</span>
@@ -161,5 +215,6 @@
                 </div>
             </div>
         </footer>
+
     </body>
 </html>
