--- a/pages/order-check.html
+++ b/pages/order-check.html
@@ -28,6 +28,7 @@
                         </a>
                         <a href="" class="cart-btn">
                             <img src="../img/icon-cart.svg" alt="">
+                            <span>3</span>
                         </a>
                         <a href="" class="wish-btn">
                             <img src="../img/icon-wish.svg" alt="">
@@ -89,61 +90,8 @@
 
             </div>
         </header>
-
         <!-- 메인 -->
-        <main class="register-wrap login-wrap">
-            <form class="login-group">
-                <h2 class="">로그인</h2>
-                <ul>
-                    <li><input type="text" placeholder="아이디를 입력해주세요." title="아이디입력"></li>
-                    <li class="password-group">
-                        <input type="password" placeholder="비밀번호를 입력해주세요." title="비밀번호입력">
-                        <span>비밀번호가 일치하지 않습니다</span>
-                        <a href="" class="view-btn"></a>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="login">
-                        <label for="login">
-                            <span>로그인 상태유지</span>                                
-                        </label>
-                        <a href="">아이디/비밀번호</a>
-                    </li>
-                    <li>
-                        <button>로그인하기</button>
-                    </li>
-                    <li class="sns-wrap">
-                        <div class="sns-group">
-                            <h3>SNS로그인</h3>
-                            <div class="img-box">
-                                <a href="" class="kakao">
-                                    <img src="../img/ico-kakao.svg" alt="">
-                                </a>
-                                <a href="" class="naver">
-                                    <img src="../img/ico-naver.svg" alt="">
-                                </a>
-                                <a href="" class="google">
-                                    <img src="../img/ico-google.svg" alt="">
-                                </a>
-                                <a href="" class="apple">
-                                    <img src="../img/ico-apple.svg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="register-btn-box">
-                        <a class="register-btn">회원가입</a>
-                    </li>
-                </ul>
-                <a href="" class="bottom">
-                    <span>회원이 아니신가요?</span>
-                    <span>비회원 주문조회</span>
-                    <div class="img-box">
-                        <img src="../img/right-arrow.svg" alt="">
-                    </div>
-                </a>
-            </form>
-        </main>
-
+        <main></main>
         <!-- 푸터 -->
         <footer>
             <div class="top-area">
