--- a/pages/find-by-email.html
+++ b/pages/find-by-email.html
@@ -28,6 +28,7 @@
                         </a>
                         <a href="" class="cart-btn">
                             <img src="../img/icon-cart.svg" alt="">
+                            <span>3</span>
                         </a>
                         <a href="" class="wish-btn">
                             <img src="../img/icon-wish.svg" alt="">
@@ -89,61 +90,26 @@
 
             </div>
         </header>
-
         <!-- 메인 -->
-        <main class="register-wrap login-wrap">
-            <form class="login-group">
-                <h2 class="">로그인</h2>
+        <main class="find-wrap register-wrap">
+            <form class="find-group find-by-email-group register-group">
+                <h2>계정찾기</h2>
                 <ul>
-                    <li><input type="text" placeholder="아이디를 입력해주세요." title="아이디입력"></li>
-                    <li class="password-group">
-                        <input type="password" placeholder="비밀번호를 입력해주세요." title="비밀번호입력">
-                        <span>비밀번호가 일치하지 않습니다</span>
-                        <a href="" class="view-btn"></a>
-                    </li>
                     <li>
-                        <input type="checkbox" id="login">
-                        <label for="login">
-                            <span>로그인 상태유지</span>                                
-                        </label>
-                        <a href="">아이디/비밀번호</a>
+                        <span class="active">아이디 찾기</span>
+                        <span>비밀번호 찾기</span>
                     </li>
-                    <li>
-                        <button>로그인하기</button>
-                    </li>
-                    <li class="sns-wrap">
-                        <div class="sns-group">
-                            <h3>SNS로그인</h3>
-                            <div class="img-box">
-                                <a href="" class="kakao">
-                                    <img src="../img/ico-kakao.svg" alt="">
-                                </a>
-                                <a href="" class="naver">
-                                    <img src="../img/ico-naver.svg" alt="">
-                                </a>
-                                <a href="" class="google">
-                                    <img src="../img/ico-google.svg" alt="">
-                                </a>
-                                <a href="" class="apple">
-                                    <img src="../img/ico-apple.svg" alt="">
-                                </a>
-                            </div>
+                    <li class="find-pwd-by-email">
+                        <h3>이메일 링크 발송 완료</h3>
+                        <p>비밀번호 재설정을 위한 링크가 고객님의<br> 휴대폰 번호 (010.1234.5555)로 전송되었습니다.</p>
+                        <div class="txt-box">
+                            <span>내용을 확인하시고 안내에 따라 비빌번호를 재설정하세요</span>
+                            <span>(링크는 1시간이 지나면 다시 시도해주셔야 합니다.)</span>
                         </div>
                     </li>
-                    <li class="register-btn-box">
-                        <a class="register-btn">회원가입</a>
-                    </li>
                 </ul>
-                <a href="" class="bottom">
-                    <span>회원이 아니신가요?</span>
-                    <span>비회원 주문조회</span>
-                    <div class="img-box">
-                        <img src="../img/right-arrow.svg" alt="">
-                    </div>
-                </a>
             </form>
         </main>
-
         <!-- 푸터 -->
         <footer>
             <div class="top-area">
