쇼핑몰페이지추가

--- a/pages/order-chk.html
+++ b/pages/order-chk.html
@@ -28,7 +28,6 @@
                         </a>
                         <a href="" class="cart-btn">
                             <img src="../img/icon-cart.svg" alt="">
-                            <span>3</span>
                         </a>
                         <a href="" class="wish-btn">
                             <img src="../img/icon-wish.svg" alt="">
@@ -90,8 +89,27 @@
 
             </div>
         </header>
+
         <!-- 메인 -->
-        <main></main>
+        <main class="register-wrap order-chk-wrap">
+            <form class="login-group">
+                <h2 class="">비회원 주문조회</h2>
+                <ul>
+                    <li>
+                        <input type="text" placeholder="비밀번호를 입력해주세요" title="비밀번호입력">
+                        <a href="" class="view-btn"></a>
+                    </li>
+                    <li class="password-group">
+                        <input type="password" placeholder="비밀번호를 다시 입력해주세요." title="비밀번호재입력">
+                        <a href="" class="view-btn"></a>
+                    </li>
+                    <li>
+                        <a href="" class="re-pwd-btn">주문배송조회</a>
+                    </li>
+                </ul>
+            </form>
+        </main>
+
         <!-- 푸터 -->
         <footer>
             <div class="top-area">
