--- a/pages/change-pwd.html
+++ b/pages/change-pwd.html
@@ -28,7 +28,6 @@
                         </a>
                         <a href="" class="cart-btn">
                             <img src="../img/icon-cart.svg" alt="">
-                            <span>3</span>
                         </a>
                         <a href="" class="wish-btn">
                             <img src="../img/icon-wish.svg" alt="">
@@ -90,60 +89,28 @@
 
             </div>
         </header>
+
         <!-- 메인 -->
-        <main class="register-wrap signup-wrap">
-            <section class="signup-group">
-                <form action="">
-                    <h2>회원가입</h2>
-                    <ul>
-                        <li>
-                            <label for="loginid">* 아이디</label>
-                            <input type="text" placeholder="아이디(이메일 주소)" id="loginid">
-                        </li>
-                        <li>
-                            <label for="password">* 비밀번호</label>
-                            <div>
-                                <input type="password" placeholder="비밀번호" id="password">
-                                <a href="" class="view-btn"></a>
-                            </div>
-                        </li>
-                        <li>
-                            <input type="re-password" placeholder="비밀번호 재입력" title="비밀번호재입력">
-                            <a href="" class="view-btn"></a>
-                        <li>
-                            <label for="name">* 이름</label>
-                            <input type="text" placeholder="이름(실명)" id="name">
-                            <button class="num-transfer-btn">인증번호 전송</button>
-                        </li>
-                        <li>
-                            <input type="text" placeholder="인증번호 입력">
-                        </li>
-                        <li>
-                            <div class="radio-group">
-                                <label class="radio">
-                                    <input type="radio" name="info">                                    
-                                    <span>이용약관 동의</span>
-                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
-                                </label>
-                                <label class="radio">                                    
-                                    <input type="radio" name="info">
-                                    <span>개인정보 취급방침 동의</span>
-                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
-                                </label>
-                                <label class="radio">
-                                    <input type="radio" name="info">
-                                    <span>마케팅 정보 수신 동의</span>
-                                    <button><img src="../img/right-arrow-bk.svg" alt=""></button>
-                                </label>
-                            </div>
-                        </li>
-                        <li class="register-btn-box">
-                            <button class="signup-btn register-btn">회원가입</button>
-                        </li>
-                    </ul>
-                </form>
-            </section>
+        <main class="register-wrap change-pwd-wrap">
+            <form class="login-group">
+                <h2 class="">비밀번호 재설정</h2>
+                <p>비밀번호를 재설정 해주세요.</p>
+                <ul>
+                    <li>
+                        <input type="text" placeholder="비밀번호를 입력해주세요" title="비밀번호입력">
+                        <a href="" class="view-btn"></a>
+                    </li>
+                    <li class="password-group">
+                        <input type="password" placeholder="비밀번호를 다시 입력해주세요." title="비밀번호재입력">
+                        <a href="" class="view-btn"></a>
+                    </li>
+                    <li>
+                        <a href="" class="re-pwd-btn">비밀번호 재설정</a>
+                    </li>
+                </ul>
+            </form>
         </main>
+
         <!-- 푸터 -->
         <footer>
             <div class="top-area">
